completed half of nb01

--- a/nb01_pandas_titanic.ipynb
+++ b/nb01_pandas_titanic.ipynb
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "people_survived = # TODO \n",
+    "people_survived = sum(df[\"Survived\"])\n",
     "print(\"{} people survived the disaster\".format(people_survived))"
    ]
   },
@@ -116,8 +116,8 @@
    },
    "outputs": [],
    "source": [
-    "male_survived = # TODO \n",
-    "female_survived = # TODO \n",
+    "male_survived = sum(df[df[\"Sex\"] == \"male\"][\"Survived\"])\n",
+    "female_survived = sum(df[df[\"Sex\"] == \"female\"][\"Survived\"])\n",
     "print(\"{} men survived the disaster\".format(male_survived))\n",
     "print(\"{} women survived the disaster\".format(female_survived))"
    ]
@@ -139,7 +139,7 @@
    },
    "outputs": [],
    "source": [
-    "children_survived = # TODO \n",
+    "children_survived = sum(df[df[\"Age\"] < 12][\"Survived\"])\n",
     "print(\"{} children survived the disaster\".format(children_survived))"
    ]
   },
@@ -160,8 +160,8 @@
    },
    "outputs": [],
    "source": [
-    "df[\"Family\"] = # TODO \n",
-    "family_survived = # TODO \n",
+    "df[\"Family\"] = df[\"SibSp\"]+df[\"Parch\"]\n",
+    "family_survived = sum(df[df[\"Family\"] > 3][\"Survived\"])\n",
     "print(\"{} people traveling with 3 or more family members survived the disaster\".format(family_survived))"
    ]
   },
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
