--- a/Homework/hmwk03_Kaur_Baljot.ipynb
+++ b/Homework/hmwk03_Kaur_Baljot.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -72,7 +72,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C can be any value. Approaching infinity, the function above is 0, and will always be continuous. "
+    "To be valid the integral must be 1. Since x must be positive, we must take the itegral from 0 to $\\inf$ of f(x), equate it to 1, and solve for c. First to solve for defenite:\n",
+    "\n",
+    "$$\n",
+    "F(x) = \\int \\begin{cases}\n",
+    "         c \\ x \\ e^{\\left(-\\frac{x^2}{10}\\right)} & 0 \\leq x < \\infty \\\\\n",
+    "         0                           & \\text{otherwise}\n",
+    "       \\end{cases}\n",
+    "$$\n",
+    "After Evaluating Integral with the Chain Rule\n",
+    "$$\n",
+    "F(x) = \\begin{cases}\n",
+    "         -5c \\ e^{\\left(-\\frac{x^2}{10}\\right)} & 0 \\leq x < \\infty \\\\\n",
+    "         0                           & \\text{otherwise}\n",
+    "       \\end{cases}\n",
+    "$$\n",
+    "\n",
+    "Itegral from 0 to $\\inf$:\n",
+    "\n",
+    "$$\n",
+    "     = -5c \\ e^{\\left(-\\frac{x^2}{10}\\right)}\\rvert_{0}^{\\infty}\n",
+    "$$\n",
+    "$$\n",
+    "     =  \\displaystyle \\lim_{x\\rightarrow \\infty} -5c \\ e^{\\left(-\\frac{x^2}{10}\\right)} + 5c \\ e^{\\left(-\\frac{0^2}{10}\\right)} \n",
+    "$$\n",
+    "$$\n",
+    "    = \\displaystyle \\lim_{x\\rightarrow \\infty} \\frac{-5c} {e^{\\left(\\frac{x^2}{10}\\right)}} + 5c * 1\n",
+    "$$\n",
+    "$$\n",
+    "    = \\displaystyle \\lim_{x\\rightarrow \\infty} \\frac{constant}{\\infty} + 5c\n",
+    "$$\n",
+    "$$\n",
+    "    = 0 + 5c = 5c\n",
+    "$$\n",
+    "This must be equal to 1, thus \n",
+    "c must be 1/5"
    ]
   },
   {
@@ -89,24 +123,56 @@
     "$$ CDF = \\int f(x)\\ = F(x) $$\n",
     "$$\n",
     "F(x) = \\int \\begin{cases}\n",
-    "         c \\ x \\ e^{\\left(-\\frac{x^2}{10}\\right)} & 0 \\leq x < \\infty \\\\\n",
+    "         \\frac{1}{5} \\ x \\ e^{\\left(-\\frac{x^2}{10}\\right)} & 0 \\leq x < \\infty \\\\\n",
     "         0                           & \\text{otherwise}\n",
     "       \\end{cases}\n",
     "$$\n",
     "After Evaluating Integral with the Chain Rule\n",
     "$$\n",
     "F(x) = \\begin{cases}\n",
-    "         -5c \\ e^{\\left(-\\frac{x^2}{10}\\right)} & 0 \\leq x < \\infty \\\\\n",
+    "         - \\ e^{\\left(-\\frac{x^2}{10}\\right)} & 0 \\leq x < \\infty \\\\\n",
     "         0                           & \\text{otherwise}\n",
     "       \\end{cases}\n",
     "$$\n",
+    "Evaluating this integral for 0 to x will give us the CDF\n",
+    "$$\n",
+    "    = -e^{\\left(-\\frac{x^2}{10}\\right)}\\rvert_{0}^{x}\n",
+    "$$\n",
+    "$$\n",
+    "    = -e^{\\left(-\\frac{x^2}{10}\\right)}-(-e^{\\left(-\\frac{0}{10}\\right)}) \n",
+    "$$\n",
+    "$$\n",
+    "    = -e^{\\left(-\\frac{x^2}{10}\\right)} + 1\n",
+    "$$\n",
     "\n",
     "Sanity Checks:\n",
-    "1. F(0) is -5c, which represents the starting position of the water\n",
-    "2. F($\\infty$) is 0\n",
+    "1. F(0) is 0\n",
+    "2. F($\\infty$) is 1\n",
     "\n",
-    "Confirmation for 2:\n",
-    "$$\\displaystyle \\lim_{x\\rightarrow \\infty} F(x) = \\displaystyle \\lim_{x\\rightarrow \\infty} -5c \\ e^{\\left(-\\frac{x^2}{10}\\right)}$$"
+    "-1.\n",
+    "$$\n",
+    "    = -e^{\\left(-\\frac{0}{10}\\right)} + 1\n",
+    "$$\n",
+    "$$\n",
+    "    = 1\n",
+    "$$\n",
+    "\n",
+    "-2. \n",
+    "$$\n",
+    "    = \\displaystyle \\lim_{x\\rightarrow \\infty} -e^{\\left(-\\frac{x^2}{10}\\right)} + 1\n",
+    "$$\n",
+    "$$\n",
+    "    = \\displaystyle \\lim_{x\\rightarrow \\infty} -e^{\\left(-\\frac{x^2}{10}\\right)} + 1\n",
+    "$$\n",
+    "$$\n",
+    "    = \\displaystyle \\lim_{x\\rightarrow \\infty} \\frac{1}{-e^{\\left(\\frac{x^2}{10}\\right)}} + 1\n",
+    "$$\n",
+    "$$\n",
+    "    = \\displaystyle \\lim_{x\\rightarrow \\infty} 0 + 1 = 1\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "These values are in allignment with the defenition of CDF. CDF is accumulative and should be 1 as it approaches $\\infty$ and be 0 at 0. "
    ]
   },
   {
@@ -120,10 +186,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\tilde{x} = \\int_0^m f(x) = \\frac{1}{2} $$\n",
-    "$$ = -5c \\ e^{\\left(-\\frac{x^2}{10}\\right)}\\rvert_{0}^{m} =  \\frac{1}{2}$$\n",
-    "$$ = -5c \\ e^{\\left(-\\frac{0^2}{10}\\right)} - (-5c \\ e^{\\left(-\\frac{m^2}{10}\\right)}) = \\frac{1}{2} $$\n",
-    "\n"
+    "To find this, we would need to find an x value that makes the equation equal to \n",
+    "$$ -e^{\\left(-\\frac{x^2}{10}\\right)} + 1 = \\frac{1}{2} $$\n",
+    "$$ -e^{\\left(-\\frac{x^2}{10}\\right)} = -\\frac{1}{2} $$\n",
+    "$$ -e^{\\left(-\\frac{x^2}{10}\\right)} = -\\frac{1}{2} $$\n",
+    "$$ e^{\\left(-\\frac{x^2}{10}\\right)} = \\frac{1}{2} $$\n",
+    "$$ {\\left(-\\frac{x^2}{10}\\right)} = ln(\\frac{1}{2}) $$\n",
+    "$$ x = \\sqrt{ln(\\frac{1}{2})*-10} $$\n",
+    "$$ x = 2.633 $$"
    ]
   },
   {
@@ -134,13 +204,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "We need to calculate 1 - CDF(6) to find probability of the levels to be higher than 6\n",
+    "\n",
+    "$$ 1 - (-e^{\\left(-\\frac{6^2}{10}\\right)} + 1)$$\n",
+    "$$ = e^{\\left(-\\frac{6^2}{10}\\right)} $$\n",
+    "$$  $$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,7 +449,22 @@
    "source": [
     "I would expect them to follow a poisson distribution if we were to study the number of customers in a given time period.\n",
     "Parameters:\n",
-    "1. Poisson- "
+    "* Poisson \n",
+    "    * n = time slice multiplied by p = probability in a given time slice which provides u\n",
+    "    * n = 10 min; p for John = 4/10 = 2/5 customers per min; u for john = 4\n",
+    "    * n = 10; p for machine avg = .1(1/10)+.9(5/10) = .46 cust/min; u for machine avg = 4.6 \n",
+    "    * n = 10; p for fixed machine = (5/10); u for fixed machine = 5\n",
+    "    * n = 10; p for broken machine = (1/10); u for broken machine = 1\n",
+    "    \n",
+    "    \n",
+    " \n",
+    "* Exponential\n",
+    "    * $\\lambda$ = rate at which customers enter, same as p for Poisson\n",
+    "    * $\\lambda$ John = 2/5\n",
+    "    * $\\lambda$ Broken Machine = 1/10\n",
+    "    * $\\lambda$ Fixed Machine = 5/10\n",
+    "    * $\\lambda$ Avg for Machine = .46\n",
+    "\n"
    ]
   },
   {
