--- a/Homework/hmwk04_Kaur_Baljot.ipynb
+++ b/Homework/hmwk04_Kaur_Baljot.ipynb
@@ -75,13 +75,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What we know thus far:\n",
+    "\n",
+    "$\\mu$ = 190\n",
+    "\n",
+    "$\\sigma$ = 40\n",
+    "\n",
+    "$n$ = 36\n",
+    "\n",
+    "We will use central limit theorem:\n",
+    "\n",
+    "We know that the batch we are looking for must have over 200mSv to be unsafe which gives us the following equation:\n",
+    "$$ P(Z>\\frac{200-190}{\\sqrt{\\frac{40^2}{36}}}) $$\n",
+    "\n",
+    "$$ \\frac{200-190}{\\sqrt{\\frac{40^2}{36}}} = 1.5$$\n",
+    "\n",
+    "We want the probabilty of greater than 1.5 ...\n",
+    "\n",
+    "$$ ANS = 1 - CDF(1.5) = 1 - .933 = .067 $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part A answer = 0.06680720126885809\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Part A answer =\", 1 - stats.norm.cdf(1.5))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,6 +122,31 @@
     "**Part B.** You really do not want to throw away donuts that frequently, so you propose to store the donuts in a lead-lined donut box. But lead also is not very good for your health, so you are motivated to use the least amount of lead possible. What is the minimum mean amount of radiation $\\mu$ for our donuts to have such that the probability that we will throw donuts out due to safety concerns is at most 0.01?\n",
     "\n",
     "Calculate this **by hand**, using Python only to perform arithmetic operations and compute critical values of a standard normal random variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want an $\\bar{X}$ such that $P(\\bar{X}>200)$ is less than .001\n",
+    "\n",
+    "thus..\n",
+    "\n",
+    "$P(Z>\\frac{200-\\mu}{\\frac{\\sigma}{\\sqrt{36}}})$\n",
+    "\n",
+    "to calculate this easier, we take the compliment...\n",
+    "\n",
+    "$P(Z<=\\frac{200-\\mu}{\\frac{\\sigma}{\\sqrt{36}}}) = .999$\n",
+    "\n",
+    "lets take the right side as $\\alpha$\n",
+    "\n",
+    "$ \\alpha = \\frac{200 - \\mu}{\\frac{\\sigma}{\\sqrt{36}}}$\n",
+    "\n",
+    "$\\mu = 200 - \\alpha \\cdot \\frac{\\sigma}{6}$\n",
+    "\n",
+    "CALC 1 --> 3.09 \"check python code below\"\n",
+    "\n",
+    "$= 200 - 3.09 \\cdot \\frac{40}{6}$\n"
    ]
   },
   {
