--- a/Homework/hmwk04_Kaur_Baljot.ipynb
+++ b/Homework/hmwk04_Kaur_Baljot.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want an $\\bar{X}$ such that $P(\\bar{X}>200)$ is less than .001\n",
+    "We want an $\\bar{X}$ such that $P(\\bar{X}>200)$ is less than .01\n",
     "\n",
     "thus..\n",
     "\n",
@@ -136,7 +136,7 @@
     "\n",
     "to calculate this easier, we take the compliment...\n",
     "\n",
-    "$P(Z<=\\frac{200-\\mu}{\\frac{\\sigma}{\\sqrt{36}}}) = .999$\n",
+    "$P(Z<=\\frac{200-\\mu}{\\frac{\\sigma}{\\sqrt{36}}}) = .99$\n",
     "\n",
     "lets take the right side as $\\alpha$\n",
     "\n",
@@ -144,19 +144,30 @@
     "\n",
     "$\\mu = 200 - \\alpha \\cdot \\frac{\\sigma}{6}$\n",
     "\n",
-    "CALC 1 --> 3.09 \"check python code below\"\n",
+    "CALC 1 --> 2.326 \"check python code below\"\n",
     "\n",
-    "$= 200 - 3.09 \\cdot \\frac{40}{6}$\n"
+    "$= 200 - 2.326 \\cdot \\frac{40}{6} = 184.5$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpha is:  2.3263478740408408\n",
+      "Minimum mean:  184.49101417306105\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = stats.norm.ppf(.99)\n",
+    "print(\"Alpha is: \", alpha)\n",
+    "print(\"Minimum mean: \", 200-alpha*40/6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,13 +181,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "From the last part, we know that our alpha is: 2.326\n",
+    "\n",
+    "we need to find n...\n",
+    "\n",
+    "$\\frac{200-190}{\\frac{40^2}{\\sqrt{n}}} = 2.326$ \n",
+    "\n",
+    "$\\frac{100n}{1600} = 2.326^2 = 5.428$\n",
+    "\n",
+    "$100n = 8684.8$\n",
+    "\n",
+    "$n = sample Size = 86.85$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,13 +209,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "I immediatly thought of two potential issues:\n",
+    "\n",
+    "1. This distrubution considers radiation levels as potentially negative, which is not possible\n",
+    "2. D"
+   ]
   }
  ],
  "metadata": {
@@ -213,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
