--- a/Practicums/practicum1_Kaur_Baljot.ipynb
+++ b/Practicums/practicum1_Kaur_Baljot.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "***\n",
     "\n",
-    "**Name**:  \n",
+    "**Name**:  Baljot Kaur\n",
     "\n",
     "***\n",
     "\n",
@@ -50,10 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy import stats\n",
@@ -211,7 +209,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No values rolled can be the same, they all must be different\n",
+    "\n",
+    "This gives us 5! number of possibilities\n",
+    "\n",
+    "Total possibilities for a five sided dice is $5^5$\n",
+    "\n",
+    "P(straight) = $\\frac{5!}{5^5} = .0384$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part A Answer:  0.0371\n",
+      "It matches!\n"
+     ]
+    }
+   ],
+   "source": [
+    "dice = np.array([5,4,3,2,1])\n",
+    "def partA(dice, numRoll): #prints the number of successes given the num of trials\n",
+    "    success=0\n",
+    "    for x in range(0,numRoll):\n",
+    "        myTurn = np.random.choice(dice, replace=True, size=5)\n",
+    "        if (len(np.unique(myTurn))==5):\n",
+    "            success = success+1\n",
+    "    return success\n",
+    "            \n",
+    "print(\"Part A Answer: \", partA(dice,10000)/10000)\n",
+    "\n",
+    "print(\"It matches! This simulaton confirms our math.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,27 +263,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part B Ans: 0.5242\n",
+      "The probability is around 1/2 consistently, there is a 50% chance of a straigt after a full turn of yahtzee\n"
+     ]
+    }
+   ],
    "source": [
     "def dire_straights(ntrial):\n",
-    "    \n",
-    "    # your code goes here!\n",
-    "        \n",
-    "    return 0 # this is a placeholder"
+    "    success = 0\n",
+    "    for x in range(0, ntrial):\n",
+    "        myTrial=np.random.choice(dice, replace=True, size=5)\n",
+    "        saves = np.unique(myTrial)\n",
+    "        if (len(saves) == 5):\n",
+    "            success = success + 1\n",
+    "        else:\n",
+    "            myTrial = list(saves) + list(np.random.choice(dice, replace=True, size=5))\n",
+    "            saves = np.unique(myTrial)\n",
+    "            if (len(saves) == 5):\n",
+    "                success = success + 1\n",
+    "    return success # this is a placeholder\n",
+    "\n",
+    "print(\"Part B Ans:\", dire_straights(10000)/10000)\n",
+    "\n",
+    "print(\"The probability is around 1/2 consistently, there is a 50% chance of a straigt after a full turn of yahtzee\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -316,9 +361,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [anaconda3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [anaconda3]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -330,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
