--- a/Practicums/practicum1_Kaur_Baljot.ipynb
+++ b/Practicums/practicum1_Kaur_Baljot.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part A Answer:  0.0371\n",
-      "It matches!\n"
+      "Part A Answer:  0.041\n",
+      "It matches! This simulaton confirms our math.\n"
      ]
     }
    ],
@@ -263,18 +263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Part B Ans: 0.5242\n",
-      "The probability is around 1/2 consistently, there is a 50% chance of a straigt after a full turn of yahtzee\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dire_straights(ntrial):\n",
     "    success = 0\n",
@@ -284,10 +275,15 @@
     "        if (len(saves) == 5):\n",
     "            success = success + 1\n",
     "        else:\n",
-    "            myTrial = list(saves) + list(np.random.choice(dice, replace=True, size=5))\n",
+    "            myTrial = list(saves) + list(np.random.choice(dice, replace=True, size=len(saves)))\n",
     "            saves = np.unique(myTrial)\n",
     "            if (len(saves) == 5):\n",
     "                success = success + 1\n",
+    "            else:\n",
+    "                myTrial = list(saves) + list(np.random.choice(dice, replace=True, size=len(saves)))\n",
+    "                saves = np.unique(myTrial)\n",
+    "                if (len(saves)==5):\n",
+    "                    success = success + 1\n",
     "    return success # this is a placeholder\n",
     "\n",
     "print(\"Part B Ans:\", dire_straights(10000)/10000)\n",
@@ -375,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
